--- a/app/assets/stylesheets/admins/shop_genres.scss
+++ b/app/assets/stylesheets/admins/shop_genres.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the shops/genres controller here.
+// Place all the styles related to the admins/shop_genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
