--- a/app/views/shops/courses/index.html.erb
+++ b/app/views/shops/courses/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Shops::Courses#index</h1>
-<p>Find me in app/views/shops/courses/index.html.erb</p>
+<h1>コース一覧</h1>
+
+<div class="item_list_box">
+	<% @coureses.each do |course| %>
+	<div class="course">
+	<%= link_to shops_course(course.id), class: "item_link" do %>
+	<%= attachment_image_tag course, :course_image, :fill, 200, 150, format: 'jpeg', class: "img-rounded pull-left profile-img", fallback: "no_image.jpg", :size =>'200x150' %>
+	<% end %>
+	<div class="item_btn">
+	<%= link_to course.name, course_path(course.id), class: "item_link" %>
+	</div>
+</div>
