--- a/app/views/users/addresses/index.html.erb
+++ b/app/views/users/addresses/index.html.erb
@@ -2,6 +2,14 @@
   <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
 <% end %>
 
+<% if @address.errors.any? %>
+  <ul>
+  <% @address.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+  </ul>
+<% end %>
+
 <div class="container">
 	<h2>配送先登録</h2>
 
