--- a/app/views/users/shops/index_html.erb
+++ b/app/views/users/shops/index_html.erb
@@ -1,2 +1,5 @@
 <h1>Users::Shops#index</h1>
 <p>Find me in app/views/users/shops/index.html.erb</p>
+
+
+<%= render 'users/reviews/all', reviews: @reviews %>
