--- a/app/views/shops/courses/edit.html.erb
+++ b/app/views/shops/courses/edit.html.erb
@@ -1,2 +1,24 @@
 <h1>Shops::Courses#edit</h1>
+
+<h2>コース編集</h2>
+<%= form_for @course, url:"/shops/courses/#{@course.id}" do |f| %>
+<h3>コース名</h3>
+<%= f.text_field :name %>
+
+<h3>説明</h3>
+<%= f.text_field :introduction %>
+
+<h3>最大人数</h3>
+<%= f.text_field :maximum_people %>
+
+<h3>最小人数</h3>
+<%= f.text_field :minimum_people %>
+
+<h3>価格</h3>
+<%= f.text_field :price %>
+
+<%= f.submit "編集" %>
+
+<% end %>
+
 <p>Find me in app/views/shops/courses/edit.html.erb</p>
