--- a/app/views/shops/courses/index.html.erb
+++ b/app/views/shops/courses/index.html.erb
@@ -1,12 +1,14 @@
 <h1>コース一覧</h1>
 
+<%= link_to "マイページへ",shops_shop_path(current_shop) %>
+
 <div class="item_list_box">
-	<% @coureses.each do |course| %>
+	<% @courses.each do |course| %>
 	<div class="course">
-	<%= link_to shops_course(course.id), class: "item_link" do %>
+	<%= link_to shops_course_path(course.id), class: "item_link" do %>
 	<%= attachment_image_tag course, :course_image, :fill, 200, 150, format: 'jpeg', class: "img-rounded pull-left profile-img", fallback: "no_image.jpg", :size =>'200x150' %>
+	<%= course.introduction %>
+	<%= link_to course.name %>
 	<% end %>
-	<div class="item_btn">
-	<%= link_to course.name, course_path(course.id), class: "item_link" %>
-	</div>
+	<% end %>
 </div>
