[add]user-credit_card-index

--- a/app/views/users/credit_cards/index.html.erb
+++ b/app/views/users/credit_cards/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Users::CreditCards#index</h1>
-<p>Find me in app/views/users/credit_cards/index.html.erb</p>
+<div class="container">
+	<h2>登録したクレジットカード一覧</h2>
+	<table class="table">
+		<tr>
+			<th>カードナンバー</th>
+			<th>名義</th>
+			<th>有効期限</th>
+		</tr>
+
+		<% @credit_cards.each do |credit_card| %>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	<% end %>
+	</table>
+</div>
