[create] shop show,edit

--- a/app/views/shops/shops/edit.html.erb
+++ b/app/views/shops/shops/edit.html.erb
@@ -1,2 +1,80 @@
-<h1>Shops::Shops#edit</h1>
-<p>Find me in app/views/shops/shops/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12" style="border: 1px solid #000;"><br>
+      <h2><strong>マイページ編集</strong></h2><br>
+      <%= form_for(@shop, url:shops_shop_path(@shop.id)) do |f| %>
+        <div class="row">
+          <div class="col-3">
+          <h4><%= f.label :name, "店舗名", class: 'control-label' %></h4>
+        </div>
+          <%= f.text_field :name, autocomplete: "name", class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :email, 'メールアドレス', class: 'control-label' %></h4>
+          </div>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :postal_code, '郵便番号', class: 'control-label' %></h4>
+          </div>
+            <%= f.text_field :postal_code, class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :address, '住所', class: 'control-label' %></h4>
+          </div>
+          <%= f.text_field :address, class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :phonenumber, '電話番号', class: 'control-label' %></h4>
+          </div>
+          <%= f.text_field :phonenumber, class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :shop_genre_id, '店舗ジャンル', class: 'control-label' %></h4>
+          </div>
+          <%= f.select :shop_genre_id,[["1 和風","1 和風"],["2 洋風","2 洋風"],["3 中華","3 中華"],["4 食えればなんでもOK","4 食えればなんでもOK"],["5 イタリアン","5 イタリアン"],["6 おうちでParty！！","6 おうちでParty！！"],["7 葬式","7 葬式"],["8 結婚式","8 結婚式"],["9 宴会","9 宴会"],["10 デザート","10 デザート"],["11 ジャンク","11 ジャンク"]] , {}, class: 'col-4 form-control'%>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :open_time, '開店時間', class: 'control-label' %></h4>
+          </div>
+          <%= f.text_field :open_time, class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :close_time, '閉店時間', class: 'control-label' %></h4>
+          </div>
+          <%= f.text_field :close_time, class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :lunch_limit, 'ランチ終了時間', class: 'control-label' %></h4>
+          </div>
+          <%= f.text_field :lunch_limit, class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4><%= f.label :dinner_limit, 'ディナー終了時間', class: 'control-label' %></h4>
+          </div>
+          <%= f.text_field :dinner_limit, class: 'col-4 form-control' %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+          </div>
+          <%= f.label :shop_image, "画像を変更", class: 'control-label btn btn-secondary' %>
+          <%= f.attachment_field :shop_image, style: "display: none;" %>
+        </div>
+        <div class="row">
+          <div class="col-3">
+          </div>
+          <%= f.submit "編集内容を保存する", class: "col-xs-5 col-xs-offset-3 btn btn-secondary" %>
+        </div><br>
+        <% end %>
+    </div>
+  </div>
+</div>
