--- a/app/views/admins/shop_genres/edit.html.erb
+++ b/app/views/admins/shop_genres/edit.html.erb
@@ -3,7 +3,7 @@
 		<div class="col-xs-8 col-xs-offset-2">
 			<h2>GENRE EDIT:</h2>
 			<div class="genre-body">
-				<%= form_for(@genre, url: admins_shop_genr_path(@genre.id)) do |f| %>
+				<%= form_for(@genre, url: admins_shop_genre_path(@genre.id)) do |f| %>
 					<div class = "row">
 						<div class="col-xs-6">
 							<div class="field">
