--- a/app/views/shops/courses/new.html.erb
+++ b/app/views/shops/courses/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Shops::Courses#new</h1>
 
-<%= form_for @course, url: shops_course_path(@course) do |f| %>
+<%= form_for @course, url: shops_courses_path do |f| %>
 <h3>コース名</h3>
 <%= f.text_field :name %>
 
