--- a/app/views/shops/orders/show.html.erb
+++ b/app/views/shops/orders/show.html.erb
@@ -1,2 +1,24 @@
 <h1>Shops::Orders#show</h1>
+<%= link_to "戻る", shops_orders_path(current_shop) %>
+
+<%= @order.user_name %>
+<%= @order.course_name %>
+<%= @order.delivery_address %>
+<%= @order.payment %>
+<%= @order.option %>
+<%= @order.people_number %>
+<%= @order.reserve_date %>
+<%= @order.reserve_time %>
+
+<%= @order.order_status %>
+
+<% if @order.not_compatibled? %>
+  <%= link_to '対応中に変更', shops_order_during_correspondence_path(@order), method: :patch %>
+
+<% elsif @order.during_correspondenced? %>
+  <%= link_to '対応済に変更', shops_order_support_path(@order), method: :patch %>
+
+<% else %>
+  <%= link_to '未対応に変更', shops_order_not_compatible_path(@order), method: :patch %>
+<% end %>
 <p>Find me in app/views/shops/orders/show.html.erb</p>
