--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -1,2 +1,63 @@
-<h1>Admins::Shops#show</h1>
-<p>Find me in app/views/admins/shops/show.html.erb</p>
+<div class="container">
+  <div class="row">
+      <div class="col-6">
+        <h2><strong>マイページ</strong></h2>
+        <table class="table table-bordered">
+          <tr class="shop-tr">
+            <td>ID</td>
+            <td>
+              <%= @shop.id %>
+            </td>
+          </tr>
+          <tr class="shop-tr">
+            <td>店舗名</td>
+            <td><%= @shop.name %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>メールアドレス</td>
+            <td><%= @shop.email %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>郵便番号</td>
+            <td><%= @shop.postal_code %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>住所</td>
+            <td><%= @shop.address %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>電話番号</td>
+            <td><%= @shop.phonenumber %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>店舗ジャンル</td>
+            <td>
+				<% @shop.genres.each do |shop| %>
+  					<%= shop.shop_genre.name %>
+				<% end %>
+			</td>
+          </tr>
+          <tr class="shop-tr">
+            <td>開店時間</td>
+            <td><%= @shop.open_time %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>閉店時間</td>
+            <td><%= @shop.close_time %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>ランチ終了時間</td>
+            <td><%= @shop.lunch_limit %></td>
+          </tr>
+          <tr class="shop-tr">
+            <td>ディナー終了時間</td>
+            <td><%= @shop.dinner_limit %></td>
+          </tr>
+        </table>
+        <%= link_to "編集する", edit_admins_shop_path(@shop.id), class:"btn btn-secondary" %><br><br>
+      </div>
+        <div class="col-3">
+          <%= attachment_image_tag @shop, :shop_image, :fill, 250, 250, format: 'jpeg', fallback: "no_image.shop.jpg", size:"250x250" %>
+        </div>
+  </div>
+</div>
