--- a/app/views/devise/shops/registrations/new.html.erb
+++ b/app/views/devise/shops/registrations/new.html.erb
@@ -4,6 +4,31 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :name, "ショップ名" %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :phonenumber, "電話番号" %><br />
+    <%= f.telephone_field :phonenumber %>
+  </div>
+  <div class="field">
+      <%= f.label :open_time, "開店時間" %><br />
+      <%= f.text_field :open_time %>
+    </div>
+    <div class="field">
+      <%= f.label :close_time, "閉店時間" %><br />
+      <%= f.text_field :close_time %>
+    </div>
+  <div class="field">
+      <%= f.label :postal_code, "郵便番号" %><br />
+      <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code"  %>
+  </div>
+  <div class="field">
+    <%= f.label :address, "住所"%><br />
+    <%= f.text_field :address %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
