--- a/app/assets/stylesheets/users/reviews.scss
+++ b/app/assets/stylesheets/users/reviews.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the users/reviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.reviews-box {
+	border: solid 0.5px;
+}
