--- a/app/views/users/credit_cards/new.html.erb
+++ b/app/views/users/credit_cards/new.html.erb
@@ -20,7 +20,7 @@
 
 		<div class="row">
 			<%= f.label :card_number, "カード番号" %>（<span style="color: red;">※必須</span>）
-			<%= f.text_field :card_number, class:"form-control", placeholder:"例：012345678901" %>
+			<%= f.text_field :card_number, class:"form-control", placeholder:"例：301245678901 or 3012-4567-8901" %>
 		</div>
 
 		<div class="row">
