shop/information,shop/shop編集

--- a/app/views/shops/informations/index.html.erb
+++ b/app/views/shops/informations/index.html.erb
@@ -1,2 +1,40 @@
-<h1>Shops::Informations#index</h1>
-<p>Find me in app/views/shops/informations/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h2><strong>お知らせ一覧</strong></h2>
+      <% @informations.each do |information| %>
+    </div>
+
+    <div class="col-5">
+      <%= attachment_image_tag @shop, :shop_image, :fill, 250, 250, format: 'jpeg', fallback: "no_image.shop.jpg", size:"250x250" %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1">
+      <h6>店名</h6>
+    </div>
+    <div class="col-6">
+      <h5><%= link_to information.shop.name, shops_shop_path(information.shop_id) %></h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1">
+      <h6>件名</h6>
+    </div>
+    <div class="col-6">
+      <h5><%= link_to information.title, shops_information_path(information.id) %></h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1">
+      <h6>内容</h6>
+    </div>
+    <div class="col-6">
+      <h5><%= information.text %></h5>
+    </div>
+  </div>
+  <% end %>
+    <div class="col-4"><br><br><br>
+      <%= link_to "お知らせ新規作成", new_shops_information_path, class:"btn btn-secondary" %>
+    </div>
+</div>
