--- a/app/views/shops/inquiries/show.html.erb
+++ b/app/views/shops/inquiries/show.html.erb
@@ -1,2 +1,15 @@
 <h1>Shops::Inquiries#show</h1>
-<p>Find me in app/views/shops/inquiries/show.html.erb</p>
+
+<%= link_to "お問い合わせ一覧へ", shops_inquiries_path %>
+
+
+<table class="table table-bordered">
+		<tr class="shop-tr">
+			<td>タイトル</td>
+			<td><%= @inquiry.title %></td>
+		</tr>
+		<tr class="shop-tr">
+			<td>内容</td>
+			<td><%= @inquiry.body %></td>
+		</tr>
+</table>
