--- a/app/views/users/courses/show.html.erb
+++ b/app/views/users/courses/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Users::Courses#show</h1>
 <p>Find me in app/views/users/courses/show.html.erb</p>
+
+
+<%= render 'users/orders/select_course', orders: @orders, order: @order %>
